--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,4 +1,4 @@
-# Frontend Dockerfile - Multi-stage build
+# Backend Dockerfile - Multi-stage build
 FROM node:20-alpine AS builder
 
 # Créer le répertoire de travail
@@ -7,30 +7,43 @@ WORKDIR /app
 # Copier les fichiers package
 COPY package*.json ./
 
-# Installer les dépendances
+# Installer TOUTES les dépendances (y compris devDependencies pour le build)
 RUN npm ci
 
 # Copier le code source
 COPY . .
 
-# Argument pour l'URL de l'API
-ARG VITE_API_URL
-ENV VITE_API_URL=$VITE_API_URL
-
-# Build de production optimisé
+# Build TypeScript
 RUN npm run build
 
-# Stage de production avec nginx
-FROM nginx:alpine
+# Stage de production
+FROM node:20-alpine
 
-# Copier les fichiers buildés depuis builder
-COPY --from=builder /app/dist /usr/share/nginx/html
+WORKDIR /app
 
-# Copier la configuration nginx personnalisée
-COPY nginx.conf /etc/nginx/conf.d/default.conf
+# Copier seulement les dépendances de production
+COPY package*.json ./
+RUN npm ci --only=production
 
-# Exposer le port 80
-EXPOSE 80
+# Copier le code compilé depuis le builder
+COPY --from=builder /app/dist ./dist
 
-# Démarrer nginx
-CMD ["nginx", "-g", "daemon off;"]
+# Créer un utilisateur non-root pour la sécurité
+RUN addgroup -g 1001 -S nodejs && \
+    adduser -S nodejs -u 1001
+
+# Changer le propriétaire des fichiers
+RUN chown -R nodejs:nodejs /app
+
+# Utiliser l'utilisateur non-root
+USER nodejs
+
+# Exposer le port
+EXPOSE 3000
+
+# Variables d'environnement par défaut
+ENV NODE_ENV=production
+ENV PORT=3000
+
+# Démarrer l'application
+CMD ["node", "dist/index.js"]
