--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-react-hooks": "^7.0.1",
     "prettier": "^3.8.1",
+    "terser": "^5.46.0",
     "typescript": "~5.9.3",
     "vite": "^7.2.4"
   },
