fix: Use Nginx to serve React frontend static files

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,4 +1,4 @@
-# Backend Dockerfile - Multi-stage build
+# Frontend Dockerfile - Multi-stage build pour React
 FROM node:20-alpine AS builder
 
 # Créer le répertoire de travail
@@ -7,43 +7,54 @@ WORKDIR /app
 # Copier les fichiers package
 COPY package*.json ./
 
-# Installer TOUTES les dépendances (y compris devDependencies pour le build)
+# Installer toutes les dépendances
 RUN npm ci
 
 # Copier le code source
 COPY . .
 
-# Build TypeScript
+# Build de l'application React avec Vite
+ARG VITE_API_URL
+ENV VITE_API_URL=$VITE_API_URL
+
 RUN npm run build
 
-# Stage de production
-FROM node:20-alpine
+# Stage de production avec Nginx
+FROM nginx:alpine
 
-WORKDIR /app
+# Copier les fichiers buildés depuis le builder
+COPY --from=builder /app/dist /usr/share/nginx/html
 
-# Copier seulement les dépendances de production
-COPY package*.json ./
-RUN npm ci --only=production
+# Configuration Nginx pour React Router (SPA)
+RUN echo 'server { \
+    listen 80; \
+    server_name localhost; \
+    root /usr/share/nginx/html; \
+    index index.html; \
+    \
+    location / { \
+        try_files $uri $uri/ /index.html; \
+    } \
+    \
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ { \
+        expires 1y; \
+        add_header Cache-Control "public, immutable"; \
+    } \
+}' > /etc/nginx/conf.d/default.conf
 
-# Copier le code compilé depuis le builder
-COPY --from=builder /app/dist ./dist
+# Créer un utilisateur non-root
+RUN addgroup -g 1001 -S nginx && \
+    adduser -S nginx -u 1001 -G nginx
 
-# Créer un utilisateur non-root pour la sécurité
-RUN addgroup -g 1001 -S nodejs && \
-    adduser -S nodejs -u 1001
+# Changer les permissions
+RUN chown -R nginx:nginx /usr/share/nginx/html && \
+    chown -R nginx:nginx /var/cache/nginx && \
+    chown -R nginx:nginx /var/log/nginx && \
+    touch /var/run/nginx.pid && \
+    chown -R nginx:nginx /var/run/nginx.pid
 
-# Changer le propriétaire des fichiers
-RUN chown -R nodejs:nodejs /app
+USER nginx
 
-# Utiliser l'utilisateur non-root
-USER nodejs
+EXPOSE 80
 
-# Exposer le port
-EXPOSE 3000
-
-# Variables d'environnement par défaut
-ENV NODE_ENV=production
-ENV PORT=3000
-
-# Démarrer l'application
-CMD ["node", "dist/index.js"]
+CMD ["nginx", "-g", "daemon off;"]
